--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/01_sequences.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/01_sequences.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNFrKN6ezn1IrC8dHPE0GEp",
+      "authorship_tag": "ABX9TyPK9Pc/huvvpgssvQHrKGYa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,7 +100,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wlXOl_Holz6M",
-        "outputId": "61c0d057-53b2-42c5-9606-8b216529dc62"
+        "outputId": "6973e954-193f-4f3b-a324-2760762c6fe6"
       },
       "execution_count": 1,
       "outputs": [
@@ -173,13 +173,13 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "e2bd1b9e-d08a-436d-f0b6-dc05091549c9",
+        "outputId": "dc1f7449-5355-4e98-c687-e22d84ea7ed8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         }
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -209,13 +209,13 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "5ba655f5-111e-4403-fcf1-5935e25abfb4",
+        "outputId": "d68262b1-6e5c-4a25-bc04-13d733e79bdf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         }
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -246,13 +246,13 @@
       ],
       "metadata": {
         "id": "fiiqQUbznqCZ",
-        "outputId": "af0f2932-ada6-479d-beb9-9555b15f78d2",
+        "outputId": "39041528-a408-4a32-90d7-b9b0b46ca1fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         }
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -283,7 +283,7 @@
       "metadata": {
         "id": "-04BquM1nbe4"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -302,13 +302,13 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "1af0eb25-cffc-4756-8fa3-3a1fcd108634",
+        "outputId": "9130acb4-4c1a-43de-9cb9-fef403fdf598",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
         }
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -333,7 +333,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Recurrent neural networks are perfectly suited for sequence problems since they\n",
+        "take advantage of the underlying structure of the data, namely, the order of the\n",
+        "data points.\n",
+        "\n",
+        "A hidden state is simply a vector. The size of the vector is up to\n",
+        "you. Really. You need to specify the number of hidden dimensions, which means\n",
+        "specifying the size of the vector that represents a hidden state. \n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/rnn2.png?raw=1)\n",
+        "\n",
+        "Let’s create a two dimensional\n",
+        "hidden state."
+      ],
       "metadata": {
         "id": "1pWMxzI7Bw4r"
       }
@@ -341,63 +354,195 @@
     {
       "cell_type": "code",
       "source": [
-        "torch.manual_seed(11)\n",
-        "\n",
-        "n_layers = 5\n",
-        "n_features = X.shape[1]\n",
-        "hidden_units = 100\n",
-        "activation_fn = nn.ReLU\n",
-        "\n",
-        "model = build_model(n_features, n_layers, hidden_units, activation_fn, use_bn=False)"
+        "hidden_state = torch.zeros(2)\n",
+        "hidden_state"
       ],
       "metadata": {
-        "id": "QW0r77mzsKad"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(model)"
-      ],
-      "metadata": {
-        "id": "fgMpzO1_Cdx1",
-        "outputId": "eca560d2-38af-44cb-bdf1-bcd70a0b91ab",
+        "id": "QW0r77mzsKad",
+        "outputId": "9dc7a5c2-c196-4747-f1e5-82c72157e9ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Sequential(\n",
-            "  (h1): Linear(in_features=10, out_features=100, bias=True)\n",
-            "  (a1): ReLU()\n",
-            "  (h2): Linear(in_features=100, out_features=100, bias=True)\n",
-            "  (a2): ReLU()\n",
-            "  (h3): Linear(in_features=100, out_features=100, bias=True)\n",
-            "  (a3): ReLU()\n",
-            "  (h4): Linear(in_features=100, out_features=100, bias=True)\n",
-            "  (a4): ReLU()\n",
-            "  (h5): Linear(in_features=100, out_features=100, bias=True)\n",
-            "  (a5): ReLU()\n",
-            "  (o): Linear(in_features=100, out_features=1, bias=True)\n",
-            ")\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0., 0.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Since the final hidden state is a representation of the full sequence, that’s what\n",
+        "we’re going to use as features for our classifier.\n",
+        "\n",
+        "There is a fundamental difference between CNNs and RNNs, though: While there\n",
+        "are several different convolutional layers, each learning its own filters, the RNN\n",
+        "cell is one and the same."
+      ],
+      "metadata": {
+        "id": "Jgbo3op7H9gQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###RNN Cell"
+      ],
+      "metadata": {
+        "id": "Ay-WCYjWINMf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There is only one cell, which will learn a particular set of weights\n",
+        "and biases, and which will transform the inputs exactly the same\n",
+        "way in every step of the sequence.\n",
+        "\n",
+        "Let’s take a look at some of the internals of an RNN cell.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/rnn1.png?raw=1)"
+      ],
+      "metadata": {
+        "id": "ke2La37HIOH3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It has three main components:\n",
+        "\n",
+        "1. A linear layer to transform the hidden state (in blue)\n",
+        "2. A linear layer to transform the data point from the sequence (in red)\n",
+        "3. An activation function, usually the hyperbolic tangent (TanH), which is applied to the sum of both transformed inputs\n",
+        "\n",
+        "We can also represent them as equations:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\begin{array}\n",
+        "&\\text{RNN}: &\\color{#0066CC}{t_h}&\\color{#0066CC}{=}&\\color{#0066CC}{W_{hh}}&\\color{#0066CC}{h_{t-1}}&\\color{#0066CC}{+}&\\color{#0066CC}{b_{hh}}\n",
+        "\\\\\n",
+        "&\\color{red}{t_x}& \\color{red}{=} &\\color{red}{W_{ih}}&\\color{red}{x_{t}}&\\color{red}{+}&\\color{red}{b_{ih}}\n",
+        "\\\\\n",
+        "&\\color{#0066CC}{h_t}&\\color{#0066CC}{=}&\\color{#0066CC}{\\text{tanh}}&\\color{#0066CC}{(t_h}&\\color{#0066CC}{+}&\\color{#0066CC}{t_x)}\n",
+        "\\end{array}\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "t7vKalfLIgSG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "But there is no other cell, really; it is just the same cell over and over again.\n",
+        "\n",
+        "So, in the second step of the\n",
+        "sequence, the updated hidden state will run through the very same linear layer the\n",
+        "initial hidden state ran through. The same goes for the second data point.\n",
+        "\n",
+        "Let’s dive deeper into the internals of an RNN cell and look at it at the neuron level:\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/rnn_cell_diagram.png?raw=1)"
+      ],
+      "metadata": {
+        "id": "XaIFUnF6JGYe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since one can choose the number of hidden dimensions, I chose two dimensions,\n",
+        "simply because I want to be able to easily visualize the results. Hence, two blue\n",
+        "neurons are transforming the hidden state.\n",
+        "\n",
+        "\n",
+        "The number of red neurons transforming the data point will\n",
+        "necessarily be the same as the chosen number of hidden\n",
+        "dimensions since both transformed outputs need to be added\n",
+        "together. But this doesn’t mean the data points must have the\n",
+        "same number of dimensions.\n",
+        "\n",
+        "Coincidentally, our data points have two coordinates, but even if\n",
+        "we had 25 dimensions, these 25 features would still be mapped\n",
+        "into two dimensions by the two red neurons.\n",
+        "\n",
+        "Why hyperbolic tangent? Isn’t ReLU a better activation function?\n",
+        "\n",
+        "The hyperbolic tangent has a \"competitive advantage\" here since it maps the feature\n",
+        "space to clearly defined boundaries: the interval (-1, 1). This guarantees that, at every step of the sequence, the hidden state is always within these boundaries.\n",
+        "Given that we have only one linear layer with which to transform the hidden\n",
+        "state, regardless of which step of the sequence it is being used in, it is definitely\n",
+        "convenient to have its values within a predictable range.\n",
+        "\n",
+        "Now, let’s see how an RNN cell works in code.\n"
+      ],
+      "metadata": {
+        "id": "DdhukQWVJm8O"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# We’re only missing a loss function and an optimizer\n",
-        "loss_fn = nn.BCEWithLogitsLoss()\n",
-        "optimizer = optim.SGD(model.parameters(), lr=1e-2)"
+        "torch.manual_seed(19)\n",
+        "\n",
+        "n_features = 2\n",
+        "hidden_dim = 2\n",
+        "\n",
+        "rnn_cell = nn.RNNCell(input_size=n_features, hidden_size=hidden_dim)\n",
+        "rnn_state = rnn_cell.state_dict()\n",
+        "rnn_state"
       ],
+      "metadata": {
+        "id": "fgMpzO1_Cdx1",
+        "outputId": "e0665720-4a0d-4b69-f61c-b3996a3216d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('weight_ih',\n",
+              "              tensor([[ 0.6627, -0.4245],\n",
+              "                      [ 0.5373,  0.2294]])),\n",
+              "             ('weight_hh',\n",
+              "              tensor([[-0.4015, -0.5385],\n",
+              "                      [-0.1956, -0.6835]])),\n",
+              "             ('bias_ih', tensor([0.4954, 0.6533])),\n",
+              "             ('bias_hh', tensor([-0.3565, -0.2904]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can use these weights to create two linear layers:"
+      ],
+      "metadata": {
+        "id": "Trg9QDGzMndS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
       "metadata": {
         "id": "v8JKnoukC_Eo"
       },
