--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/01_sequences.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/01_sequences.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPcIFLlQLzIogBd3VyKDb68",
+      "authorship_tag": "ABX9TyNXAWI5XgMsJ2Gww/PFw7Xz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,10 +96,23 @@
         "from plots.chapter8 import *"
       ],
       "metadata": {
-        "id": "wlXOl_Holz6M"
+        "id": "wlXOl_Holz6M",
+        "outputId": "7f933674-852a-4fa4-95d8-1ba292e85a9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading files from GitHub repo to Colab...\n",
+            "Finished!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -160,7 +173,7 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "a2dafaa1-03ef-46b2-df92-fefb1a696d39",
+        "outputId": "a8778154-ee08-4a64-e7b2-4437ea0255c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -196,7 +209,7 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "bb3878fb-57ec-4f1a-9b59-7df902276945",
+        "outputId": "a0431c19-eaae-4618-992d-e8e982a5b3b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -233,7 +246,7 @@
       ],
       "metadata": {
         "id": "fiiqQUbznqCZ",
-        "outputId": "c6bacf9a-937b-46d3-fb6d-2c1c66a5e093",
+        "outputId": "6a9a4bc8-1027-4c91-8258-21623761bc96",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -289,7 +302,7 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "6c2b5151-bff3-4d26-ad58-4b040613f947",
+        "outputId": "3a8d1146-8a3c-4779-ffb7-4f060feb9a62",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
@@ -349,7 +362,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f80617e1-d931-468d-eb45-77b9cefc717e"
+        "outputId": "4c062f32-0f25-4797-9b2e-76073d404f9b"
       },
       "execution_count": 9,
       "outputs": [
@@ -492,7 +505,7 @@
       ],
       "metadata": {
         "id": "fgMpzO1_Cdx1",
-        "outputId": "98debb29-7455-4509-aa10-ea2d75e9b306",
+        "outputId": "d805a3df-3aa7-4c5b-9bef-a40268a8390f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -563,7 +576,7 @@
       ],
       "metadata": {
         "id": "U7THbRPfR4tO",
-        "outputId": "14e075da-52b8-478d-b4b5-ace44c894246",
+        "outputId": "00553ae2-5741-490f-ef5e-429036b179b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -600,7 +613,7 @@
       ],
       "metadata": {
         "id": "0RQR7yROSSmV",
-        "outputId": "d2d4bb83-a99b-47bf-ae8d-4c01be464c94",
+        "outputId": "a46d7269-f7f6-412a-b350-d1c95966bcf2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -636,7 +649,7 @@
       ],
       "metadata": {
         "id": "kfOyTyfxSdMU",
-        "outputId": "27c741b9-39ab-4179-89d8-8d99b696ffef",
+        "outputId": "b1519b6b-524b-4d4e-fb51-434819963370",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -675,7 +688,7 @@
       ],
       "metadata": {
         "id": "mh6oCaRyS26C",
-        "outputId": "cede6072-5ffc-490a-d8a6-682f8f56c4f4",
+        "outputId": "e8dbb2fa-5f68-48ff-f8dd-72cd5b4aaec5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -711,7 +724,7 @@
       ],
       "metadata": {
         "id": "Ofvt0ujdTJPn",
-        "outputId": "c1b7db37-cb75-4c27-9ee3-4139ed9a1d8a",
+        "outputId": "3dca282f-2c6b-404b-87f0-4e2b0bdeaa89",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -747,7 +760,7 @@
       ],
       "metadata": {
         "id": "cpnEcvNuTiWR",
-        "outputId": "e1515211-01f2-4ed1-d5cc-244acbbf5948",
+        "outputId": "d27b003f-005b-434c-f0c8-53dc459e5923",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -784,7 +797,7 @@
       ],
       "metadata": {
         "id": "Z4rLUNyTTw8_",
-        "outputId": "40e077ef-6997-423e-9b12-39522b01f0ff",
+        "outputId": "dc65c5ce-573b-49a4-c38b-e5e1930c7fca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -825,7 +838,7 @@
       ],
       "metadata": {
         "id": "38SDpCl7VucF",
-        "outputId": "65f0c72a-a5e1-4bef-87e9-7fbf0750a100",
+        "outputId": "dd2367b0-ad9a-4351-9634-6ca76b1f2b80",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 223
@@ -867,7 +880,7 @@
       ],
       "metadata": {
         "id": "fFDDhIX5XlKG",
-        "outputId": "20044713-3fd4-44fa-d17b-81139eca72c6",
+        "outputId": "eb2fafaf-d07a-4b9a-8fcd-e43bf934d5c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -922,7 +935,7 @@
       ],
       "metadata": {
         "id": "fxhP2vifYK0Q",
-        "outputId": "ca2fc364-8d21-4ea5-bb61-51f8ef0537c3",
+        "outputId": "4bfffef0-456c-470c-c0b9-1cf65fadb9a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -978,9 +991,313 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "The `nn.RNN` layer takes care of the hidden state handling for us, no matter how long\n",
+        "the input sequence is.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/rnn_cell_diagram_seq.png?raw=1)\n",
+        "\n",
+        "So, we can\n",
+        "easily create a full-fledged RNN like that:"
+      ],
       "metadata": {
         "id": "_iwisxpbZXCd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(19)\n",
+        "\n",
+        "n_features = 2\n",
+        "hidden_dim = 2\n",
+        "\n",
+        "rnn = nn.RNN(input_size=n_features, hidden_size=hidden_dim)\n",
+        "rnn.state_dict()"
+      ],
+      "metadata": {
+        "id": "3j6coSQ3KXoY",
+        "outputId": "8baac3b9-a641-46f1-81ab-f59e71c719ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('weight_ih_l0',\n",
+              "              tensor([[ 0.6627, -0.4245],\n",
+              "                      [ 0.5373,  0.2294]])),\n",
+              "             ('weight_hh_l0',\n",
+              "              tensor([[-0.4015, -0.5385],\n",
+              "                      [-0.1956, -0.6835]])),\n",
+              "             ('bias_ih_l0', tensor([0.4954, 0.6533])),\n",
+              "             ('bias_hh_l0', tensor([-0.3565, -0.2904]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let’s illustrate the differences between shapes by creating a \"batch\" containing\n",
+        "three sequences, each having four data points (corners), with each data point\n",
+        "having two coordinates. \n",
+        "\n",
+        "Its shape is (3, 4, 2), and it is an example of a batch-first\n",
+        "tensor (N, L, F), like a mini-batch you’d get from a data loader:"
+      ],
+      "metadata": {
+        "id": "cZxqSpBXLYQ_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch = torch.as_tensor(points[:3]).float()\n",
+        "batch.shape"
+      ],
+      "metadata": {
+        "id": "PVz1tloOLbiF",
+        "outputId": "2602a0e2-110f-49c5-da44-73e421542fc1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 4, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since RNNs use sequence-first by default, we could explicitly change the shape of\n",
+        "the batch using `permute()` to flip the first two dimensions:"
+      ],
+      "metadata": {
+        "id": "8u9Zd7eSMllT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "permuted_batch = batch.permute(1, 0, 2)\n",
+        "permuted_batch.shape"
+      ],
+      "metadata": {
+        "id": "zfYuoj0oMnRG",
+        "outputId": "0a86c35f-576d-4498-f3f4-cf7d70499ee2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([4, 3, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now the data is in an \"RNN-friendly\" shape, and we can run it through a regular\n",
+        "RNN to get two sequence-first tensors back:"
+      ],
+      "metadata": {
+        "id": "AS05-ItQM2sT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(19)\n",
+        "\n",
+        "rnn = nn.RNN(input_size=n_features, hidden_size=hidden_dim)\n",
+        "output, final_hidden = rnn(permuted_batch)\n",
+        "output.shape, final_hidden.shape"
+      ],
+      "metadata": {
+        "id": "_ooNCvYAM38u",
+        "outputId": "c6c132e7-0d60-4e65-b8fa-5195163d7097",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([4, 3, 2]), torch.Size([1, 3, 2]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For simple RNNs, the last element of the output is the final\n",
+        "hidden state!"
+      ],
+      "metadata": {
+        "id": "OzGvm7zdOaGO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(output[-1] == final_hidden).all()"
+      ],
+      "metadata": {
+        "id": "R57WlKgCObf5",
+        "outputId": "f89ee5d6-e0d0-42b7-d158-f312c898f0c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(True)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Once we’re done with the RNN, we can turn the data back to our familiar batchfirst\n",
+        "shape:"
+      ],
+      "metadata": {
+        "id": "6-p4kTiJOtB7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch_hidden = final_hidden.permute(1, 0, 2)\n",
+        "batch.shape"
+      ],
+      "metadata": {
+        "id": "0bg45LM1OthD",
+        "outputId": "0b1ba547-ed52-4972-e503-3babf594b6d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 4, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Alternatively, we could set the RNN’s `batch_first` argument to True so we can use the batch above without any\n",
+        "modifications:"
+      ],
+      "metadata": {
+        "id": "mm3u7clGPErs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(19)\n",
+        "\n",
+        "rnn_batch_first = nn.RNN(input_size=n_features, hidden_size=hidden_dim, batch_first=True)\n",
+        "output, final_hidden = rnn_batch_first(batch)\n",
+        "output.shape, final_hidden.shape"
+      ],
+      "metadata": {
+        "id": "08pO4WNQPIYY",
+        "outputId": "01f8552c-a5de-4b90-a733-d1501f77a0fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([3, 4, 2]), torch.Size([1, 3, 2]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "On the one hand, this can lead to confusion. On the other hand, most of the time we\n",
+        "won’t be handling the hidden state, and we’ll handle the batch-first output instead."
+      ],
+      "metadata": {
+        "id": "4wyaGw7YPnUo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Stacked RNN"
+      ],
+      "metadata": {
+        "id": "hjMNAej2P07D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "rvaL2jfyP14O"
       }
     }
   ]
